Closed Bug 1621056 Opened 4 years ago Closed 4 years ago

mismatching opcode format for NewInit

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: arai, Assigned: arai)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

https://searchfox.org/mozilla-central/rev/070a000dd49aac4a26147e137efcd91a728d13b8/js/src/vm/Opcodes.h#812

    MACRO(NewInit, new_init, NULL, 1, 0, 1, JOF_UINT32|JOF_IC) \

it should be JOF_BYTE

Attachment #9132025 - Attachment description: Bug 1621056 - Fix JSO::NewInit format. r?jorendorff! → Bug 1621056 - Fix JSOp::NewInit format. r?jorendorff!
Pushed by arai_a@mac.com:
https://hg.mozilla.org/integration/autoland/rev/1c6990d97864
Fix JSOp::NewInit format. r=jorendorff
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: