Bug 1621056 - Fix JSOp::NewInit format. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D66088

--HG--
extra : moz-landing-system : lando